[package]
name = "calculator-rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
slint = "1.3.0"
i-slint-backend-android-activity = { version = "=1.3.0", features = ["native-activity"] }
tokio = {version = "1.34.0",features = ["full"]}
tokio-util = {version = "0.7.10", default-features = false, features = ["net","compat"]}
tiberius={version="0.12.2",features = ["chrono","tds73","vendored-openssl"],default-features = false}